Multiple build failures after JDK-8221698 (Remove redundant includes from popular header files)

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 13
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • b15
    • other, ppc

      ppc64:

      /home/buildbot/worker/jdkX-linux/build/src/hotspot/cpu/ppc/gc/shared/barrierSetAssembler_ppc.cpp: In member function 'virtual void BarrierSetAssembler::resolve_jobject(MacroAssembler*, Register, Register, Register, bool)':
      /home/buildbot/worker/jdkX-linux/build/src/hotspot/cpu/ppc/gc/shared/barrierSetAssembler_ppc.cpp:111:26: error: 'JNIHandles' has not been declared
         __ clrrdi(tmp1, value, JNIHandles::weak_tag_size);
                                ^~~~~~~~~~

      x86_64, zero, minimal:

      /home/buildbot/worker/jdkX-linux/build/src/hotspot/share/classfile/systemDictionary.hpp: In static member function 'static int SystemDictionary::number_of_modifications()':
      /home/buildbot/worker/jdkX-linux/build/src/hotspot/share/classfile/systemDictionary.hpp:370:80: error: 'Compile_lock' was not declared in this scope
         static inline int number_of_modifications() { assert_locked_or_safepoint(Compile_lock); return _number_of_modifications; }
                                                                                      ^~~~~~~~~~~~

            Assignee:
            Aleksey Shipilev
            Reporter:
            Aleksey Shipilev
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: