8221726: Multiple build failures after JDK-8221698 (Remove redundant includes from popular header files)

Reviewed-by: dholmes, stuefe, iklam